Notify on repin using md-toast stop-gap (notif css)

--- a/src/client/app/+pin/components/pin.component.scss
+++ b/src/client/app/+pin/components/pin.component.scss
@@ -1,4 +1,5 @@
 :host {
+  height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -6,11 +7,11 @@
 
 md-card {
   margin: 16px;
-  max-width: 600px;
+  max-width: 400px;
 }
 
 img {
-  max-width: 600px;
+  max-width: 400px;
 }
 
 md-input {
@@ -20,7 +21,7 @@ md-input {
 md-list, md-nav-list {
   border: 1px solid rgba(0,0,0,0.12);
   margin: 16px;
-  max-width: 600px;
+  max-width: 400px;
 }
 
 .search {
